# sndb-rs

./: .gitignore  Cargo.toml  README.md  build.rs  db.toml
sql/: operator.sql  program_status.sql  sheet.sql
src/: config.rs  config.toml  lib.rs  main.rs  oldschema.rs  printer.rs  schema.rs
src/schema/: mod.rs  operator.rs  sheet.rs  status.rs
