[package]
name = "sndb-rs"
version = "0.1.0"
authors = ["paddymills <paddymills@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.4.2", features = [ "mssql", "runtime-async-std-native-tls" ] }
async-std = { version = "1.9.0", features = [ "attributes"] }
futures = { version = "0.3.12" }