[package]
name = "sndb"
version = "0.1.0"
authors = ["paddymills <paddymills@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.12"
confy = "0.4.0"
serde = "^1.0"
chrono = "0.4.19"

[dependencies.sqlx]
version = "0.4.2"
# path = "../sqlx"
features = [ "mssql", "runtime-async-std-native-tls" ]

[dependencies.async-std]
version = "1.9.0"
features = [ "attributes" ]

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.11"
