[package]
name = "sndb"
version = "0.1.0"
authors = ["paddymills <paddymills@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.12"
toml = "0.5.8"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.19"
prettytable-rs = "0.8.0"
winapi = "0.3.9"
crossterm = "0.23.2"

[dependencies.sqlx]
version = "0.6.0"
# path = "../sqlx"
features = [ "mssql", "runtime-async-std-native-tls" ]

[dependencies.async-std]
version = "1.9.0"
features = [ "attributes" ]

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.11"

[[bin]]
name = "updated_programs"
